--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>Dashboard</title></head>
+<head><title>Dashboard</title></head><link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 <body>
   <h2>Upload File to S3</h2>
   <form method="POST" enctype="multipart/form-data">
