--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>Login</title></head>
+<head><title>Login</title></head><link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 <body>
   <h2>Login</h2>
   <form method="POST">
